# hivefriends

./: .gitignore  README.md
.github/workflows/: clippy.yml  deploy-backend.yml  deploy-frontend.yml  lint-backend.yml  test-backend.yml  test-frontend.yml  testbuild-frontend.yml
backend/: Cargo.toml  integration_test.sh
backend/migrations/: 001_initial.sql  002_username_collate_nocase.sql  003_activity_changes.sql  004_add_iso.sql
backend/src/: cli.rs  lib.rs  main.rs  util.rs
backend/src/api/: activity.rs  album.rs  alias.rs  auth.rs  comment.rs  error.rs  image.rs  login.rs  public_auth.rs  settings.rs  user.rs
backend/src/api/album/: create.rs  create_share_token.rs  delete_album.rs  get_all.rs  get_by_id.rs  get_by_key.rs  get_by_share_token.rs  get_filters.rs  update.rs
backend/src/api/comment/: .create_comment.rs.rustfmt  create_comment.rs  delete_comment.rs  get_all_comments.rs  get_shared_comments.rs
backend/src/api/image/: create_comment.rs  delete_comment.rs  delete_image.rs  get_all.rs  get_all_comments.rs  get_by_key.rs  orientation.rs  update_metadata.rs  upload.rs
backend/src/data/: image.rs
backend/tests/: album_filters.rs  albums.rs  images.rs  login.rs  settings.rs  users.rs  util.rs  utils.rs
frontend/: .prettierrc  README.md  TODO.md  index.html  package-lock.json  package.json  todo.md  vite.config.ts
frontend/public/fonts/: archivo-v16-latin-200.eot  archivo-v16-latin-600.eot  archivo-v16-latin-700.eot  archivo-v16-latin-900.eot  archivo-v16-latin-regular.eot
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/__test__/: utils.test.ts
frontend/src/components/: Button.vue  Detail.vue  Modal.vue
frontend/src/components/activity/: Activity.vue  ActivityItem.vue  NotificationItem.vue
frontend/src/components/activity/models/: model-album.vue  model-comment.vue  model-image.vue  model-user.vue
frontend/src/components/albums/: Album.vue  AlbumListItem.vue  AlbumMap.vue  AlbumTimestamp.vue  ImageListitem.vue
frontend/src/components/comments/: AliasModal.vue  Comment.vue  CommentsWrap.vue
frontend/src/components/feed/: UserUpload.vue
frontend/src/components/form/: Filters.vue  InputCheckbox.vue  InputSelect.vue  InputText.vue  InputTextarea.vue  Search.vue
frontend/src/components/image/: Image.vue  UserImageItem.vue
frontend/src/components/loading/: LoadingBar.vue  LoadingSpin.vue
frontend/src/components/navigation/: Navigation.vue  Toast.vue  Toasts.vue
frontend/src/components/notifications/: NotificationItem.vue  Notifications.vue
frontend/src/components/upload/: DraftItem.vue  ImageUploadItem.vue
frontend/src/components/user/: HomeUser.vue  SocialLink.vue  UserAlbums.vue  UserImages.vue  UserProfile.vue  UserSettings.vue
frontend/src/components/user/modules/: UploadSettingsImage.vue
frontend/src/js/: _composables.ts  countries.ts  error.ts  fetch.ts  global-types.ts  map.ts  query.ts  time.ts  utils.ts  validation.ts
frontend/src/js/lib/: swiped-event.js
frontend/src/router/: index.ts
frontend/src/router/guards/: beforeResolve.ts
frontend/src/router/views/: About.vue  Activity.vue  AlbumDetail.vue  AlbumEdit.vue  AlbumList.vue  AlbumUpload.vue  Albums.vue  Feed.vue  Home.vue  ImageDetail.vue  Login.vue  User.vue
frontend/src/store/: activity.ts  album.ts  auth.ts  bread.ts  comments.ts  filters.ts  loading.ts  notification.ts  toast.ts  user.ts
frontend/src/style/: index.scss
frontend/src/style/app/: _about.scss  _album.scss  _album_detail.scss  _album_upload.scss  _alias.scss  _feed.scss  _home.scss  _login.scss  _navigation.scss  index.scss
frontend/src/style/app/album/: _album-detail.scss  _album-list.scss  _album-upload.scss  _album.scss  _album_detail.scss  (+3 more)
frontend/src/style/generic/: _activity.scss  _animation.scss  _blocks.scss  _button.scss  _dropdown.scss  _error.scss  _filters.scss  _form.scss  _layout.scss  _loading.scss  _map.scss  _modal.scss  _navigation.scss  _notification.scss  _tag.scss  _text.scss  _toasts.scss  _tooltip.scss  index.scss
frontend/src/style/overrides/: dark.scss  index.scss
frontend/src/style/setup/: _fonts.scss  _icons.scss  _mixins.scss  _reset.scss  _variables.scss  index.scss
(+11 files in other folders)
