[package]
name = "hivefriends"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
axum = { version = "0.5.4", features = ["multipart", "query", "headers"] }
tokio = { version = "1.18.2", features = ["fs", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.34"
tower-http = { version = "0.3.3", features = ["trace", "fs"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_rusqlite = "0.30.1"
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite" }
rusqlite = { version = "0.27", features = ["bundled"] }
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration" } 
lazy_static = "1.4"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
rand = "0.8.5"
image = { version = "0.24", features = ["jpeg", "png"] }
blob-uuid = "0.5"
headers = "0.3.7"
argh = "0.1.7"
argon2 = { version = "0.4.0", features = ["std"] }
rpassword = "6.0.1"
kamadak-exif = "0.5.4"
chrono = "0.4.19"
async-trait = "0.1.53"
itertools = "0.10.3"

[dev-dependencies]
reqwest = "0.11.10"
tempdir = "0.3.7"
test-case = "2.1.0"
assert_matches = "1.5.0"

[dev-dependencies.axum-test-helper]
git = "https://github.com/jokler/axum-test-helper"
branch = "hivefriends-fixes"
