[package]
name = "hivefriends"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
axum = { version = "0.5.16", features = ["multipart", "query", "headers"] }
tokio = { version = "1.19.2", features = ["fs", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.35"
tower-http = { version = "0.3.4", features = ["trace", "fs", "cors"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_rusqlite = "0.31.0"
tokio-rusqlite = "0.3.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = { git = "https://github.com/cljoly/rusqlite_migration", rev="dd52178f1ad24a7e090ebbf4a834eda0cd7c60a5" }
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
rand = "0.8.5"
image = { version = "0.24.2", features = ["jpeg", "png"] }
blob-uuid = "0.5.0"
headers = "0.3.7"
argh = "0.1.7"
argon2 = { version = "0.4.0", features = ["std"] }
rpassword = "7.0.0"
kamadak-exif = "0.5.4"
async-trait = "0.1.56"
itertools = "0.10.3"
time = { version = "0.3.11", features = ["parsing"] }
serde_with = "2.0.0"

[dev-dependencies]
reqwest = "0.11.11"
tempdir = "0.3.7"
test-case = "2.1.0"
assert_matches = "1.5.0"

[dev-dependencies.axum-test-helper]
git = "https://github.com/cloudwalk/axum-test-helper"
